
 Other changes:

   - Clarify the reference management of the collection (todo #1359).
   - ofaAccentryStore: new class.
   - ofaAccentryTreeview: new class.
   - ofaIRenderer: new interface.
   - ofaUnreconcilPage: new class.
   - ofaUnsettledPage: new class.
   - ofoCounter: new class.
   - ofoEntry: status is stored in DBMS as a char indicator (todo #1414).

-----------------------------------------------------------------------
 Version 0.68
 ============

 Released on 2017-03-21

 Total files count:    798
 Total lines count: 532196

 New features and improvements:

   Core DB Model v36
   Recurrent DB Model v9

   - CheckDBMSIntegrity: errors are displayed in red (todo #1395).
   - ClosingParms: improve account check (todo #513).
   - EntryPage: have an extended filter (todo #733).
   - EntryPage: may be opened several times.
   - ExerciceCloseAssistant: archive opening accounts balances (todo #1388).
   - Improve error messages when entering an operation (todo #1356).
   - Display conciliation group from an entry or a BAT line (todo #1372).
   - Review the window geometry management (todo #1285).
   - Let the user have a pin button to detach main tabs.
   - Pages which may be opened several times are numbered (todo #1380).
   - Printings: have a progression bar during pagination and rendering (todo #1403).
   - VAT declaration: let the label be edited by the user (todo #1378).
   - VAT declaration: operation label depends of the managed period (todo #1393).

 Bug fixes:

   - DB restoration: fix unset variable when restoring the last archive.
   - myIDialog: fix focus issue when running 'maybe_non_modal()' (todo #1355).
   - myIGridlist: fix behavior when there is no header (todo #1373).
   - ofaAccountTreeview: fix background color of pixbuf cells (todo #442).
   - ofaAccountTreeview: fix selection post-delete (todo #1400).
   - ofoAccount: make sure the DBMS stays sane when deleting an account (todo #1394).