@@ -64,6 +64,7 @@
    - ofaUnsettledPage: new class.
    - ofoCounter: new class.
    - ofoEntry: status is stored in DBMS as a char indicator (todo #1414).
+   - ofoRecurrentRun: review status (numeric in the code, alpha in the dbms).
 
 -----------------------------------------------------------------------
  Version 0.68
